macros/src/async_generic_target/trait_part/snapshots/expand_impl_custom_async_bounds.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
impl Foo for A {}
impl<T> FooAsync for A
where
    Self: Sync,
    T: Sync,
{}
