macros/src/async_generic_target/trait_part/snapshots/expand_impl_custom_async_bounds_existing_generics.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
impl<B> Foo<B> for A {}
impl<B, T> FooAsync<B> for A
where
    Self: Sync,
    T: Sync,
{}
