macros/src/async_generic_target/trait_part/snapshots/expand_impl_nop.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
impl Foo for A {}
