macros/src/async_generic_target/trait_part/snapshots/expand_impl_split_item_into_sync_and_async.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
impl Foo for A {}
impl FooAsync for A {}
