macros/src/async_generic_target/trait_part/snapshots/expand_trait_custom_async_bounds.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
trait Foo {}
trait FooAsync<T>: Send
where
    Self: Sync,
    T: Sync,
{}
