macros/src/async_generic_target/trait_part/snapshots/expand_trait_custom_async_bounds_existing_generics.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
trait Foo<B> {}
trait FooAsync<B, T>: Send
where
    Self: Sync,
    T: Sync,
{}
