macros/src/async_generic_target/trait_part/snapshots/expand_trait_nop.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
trait Foo {}
