macros/src/async_generic_target/trait_part/snapshots/expand_trait_split_transfers_only_async.snap
---
source: macros/src/async_generic_target/trait_part/mod.rs
expression: formatted1
---
trait Foo {
    fn bar() -> u16;
}
trait FooAsync {
    async fn foo() -> u8;
}
